<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_popular_name">Popular Movies</string>
    <string name="title_nowplaying_name">Now Playing Movies</string>
    <string name="title_upcoming_name">Upcoming Movies</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_retry">Retry</string>
    <string name="action_top_rated">Top rated</string>
    <string name="action_popular">Popular</string>
    <string name="action_sort_by">Sort by</string>
    <string name="movie_backdrop_content_description">Movie backdrop</string>
    <string name="movie_poster">Movie poster</string>
    <string name="label_overview">Overview:</string>
    <string name="label_runningtime">Running Time:</string>
    <string name="label_originallanguage">Original Language:</string>
    <string name="label_genre">Genre:</string>
    <string name="release_date">Release date:</string>
    <string name="vote_average">Vote average:</string>
    <string name="vote_count">Vote count:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
