<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="MovieDetailActivityBinding">

        <variable
            name="viewModel"
            type="com.soulkitchen.serifenuruysal.movieapp.viewModel.MovieViewModel" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/app_bar_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="appBar"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{viewModel.backdropPath}"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:titleTextColor="@color/colorPrimaryDark"></android.support.v7.widget.Toolbar>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="67dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_genre"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintStart_toEndOf="@+id/image_poster"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <ImageView
                        android:id="@+id/image_poster"
                        android:layout_width="175dp"
                        android:layout_height="249dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/movie_poster"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{viewModel.imageUrl}"
                        app:layout_constraintDimensionRatio="w,2:3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="203dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_poster"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@{viewModel.title}" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/release_date"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintEnd_toStartOf="@+id/text_release_date"
                        app:layout_constraintStart_toEndOf="@+id/image_poster"
                        app:layout_constraintTop_toBottomOf="@+id/text_title" />

                    <TextView
                        android:id="@+id/text_release_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/text_title"
                        tools:text="@{viewModel.releaseDate}" />

                    <TextView
                        android:id="@+id/vote_average"
                        android:layout_width="87dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/vote_average"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintEnd_toStartOf="@+id/text_count"
                        app:layout_constraintStart_toEndOf="@+id/image_poster"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/text_vote"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/vote_count"
                        app:layout_constraintTop_toBottomOf="@+id/text_count"
                        tools:text="@{viewModel.voteCount}" />

                    <TextView
                        android:id="@+id/vote_count"
                        android:layout_width="73dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/vote_count"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintEnd_toStartOf="@+id/text_vote"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toEndOf="@+id/image_poster"
                        app:layout_constraintTop_toBottomOf="@+id/vote_average" />

                    <TextView
                        android:id="@+id/text_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/vote_average"
                        app:layout_constraintTop_toBottomOf="@+id/text_release_date"
                        tools:text="@{viewModel.voteAverage}" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/label_overview"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_poster" />

                    <TextView
                        android:id="@+id/text_overview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        tools:text="@{viewModel.overview}" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="87dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/label_runningtime"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintEnd_toStartOf="@+id/textView5"
                        app:layout_constraintStart_toEndOf="@+id/image_poster"
                        app:layout_constraintTop_toBottomOf="@+id/vote_count" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="67dp"
                        android:layout_height="54dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/label_originallanguage"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintEnd_toStartOf="@+id/textView6"
                        app:layout_constraintStart_toEndOf="@+id/image_poster"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="19dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@{viewModel.runtime}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/text_vote" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@{viewModel.originalLanguage}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="19dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@{viewModel.genres}"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintStart_toEndOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>